style.scss
body {
	color: black;
	margin: 0px;
	padding: 0px;
}

.remover {
		height: 68mm;
		width: 170px;
		text-align:center;
		background-color: lightgrey;
		color: black;
		border: 2px black solid;
		padding: 10px 5px 10px 5px;
		border-radius:3px;
		button{
			position: absolute;
			left: 50%;
			bottom: 45%;
			width: 74px;
			height: 40px;
			margin-left: -37px;
			background-color: red;
		}
}

#add-btn-mobile {
	display: none;
}
.selected {
	background-color: blue !important;
	color: white !important;
}

.default-label {
	color: black;
	border: 2px black solid;
	text-align: center;
	padding: 5px;
	transition: all 0.1s ease-in-out;
	&:hover {
		background-color: lightgrey;
	}
	h1{
		font-size: 20px;
		text-transform: uppercase;
		word-wrap: break-word;
		word-break: normal;
		position:relative;
		padding-top: 3px;
	}
	h2{
		text-transform: uppercase;
		font-size: 16px;
		max-width: 170px;
		word-wrap: break-word;
		word-break: normal;
	}
	h3 {
		font-size: 12px;
		max-width: 170px;
		word-wrap: break-word;
		word-break: normal;
	}
	p {
		font-size: 10px;
		margin-bottom: 0px;
		width: 170px;
		position: absolute;
		bottom: 20px;
		left:50%;
		margin-left: -85px;
		max-width: 95vw;
		word-wrap: break-word;
		word-break: normal;
	}
}

.shell {
	background-color: orange;
}
.affix {
	margin: 0px;
	background-color: orange;
	height: 100%;
	margin-left: -15px;
}


#properties {
	display: block;
	background-color: orange;
	z-index: 1000;
	position:relative;
	left: 0px;
	padding: 20px 10px 25px 10px;
	height: 100vh;
	width: 100%;


	-webkit-box-shadow: 0px 1px 18px 2px rgba(0,0,0,0.27);
	-moz-box-shadow: 0px 1px 18px 2px rgba(0,0,0,0.27);
	box-shadow: 0px 1px 18px 2px rgba(0,0,0,0.27);
}


input {
	width: 100%;
}
@media screen  {

	body {
		background-color: #E4E4E4;
	}


}

@media (min-width: 990px) {
	#labels {
	  background-color: transparent;
		border-radius: 0px;
		margin-left:0px;
		position: relative;
		top:50px;
	}

	.default-label {
		height: 68mm;
		width: 170px;
		text-align:center;
		margin: 5px;
		background-color: white;
		border-radius:3px;
	}

}

@media (min-width:600px) and (max-width:989px){
	#labels {
		background-color: transparent;
		border-radius: 0px;
		top:50px;
	}

	.default-label {
		height: 68mm;
		width: 170px;
		text-align:center;
		margin: 5px;
		background-color: white;
		border-radius:3px;
	}

	#labels {
		margin-left: 250px;
	}
}

@media (max-width: 599px) {
	#add-btn-mobile {
		position: fixed;
		right: 25px;
		bottom: 30px;
		width: 50px;
		height: 50px;
		background-color: orange;
		border-radius: 100px;
		z-index: 900;
		transition: all .3s ease;
		display: flex;
		align-content: center;
		justify-content: center;
	}

	.add-btn-mobile-active {
		transform: rotate(-45deg);
	}
	.shell  {
		position: absolute;
		width: 100%;
		overflow-x: hidden;
		left: 800px;
		transition: all 0.3s ease-in-out;

	}

	.active{
	left: 0px;
	}

	.properties {
		width: 100vw;
		overflow-x: hidden;
	}

	#labels {
		margin-top: 50px;
		z-index: -1000;
		float: right;
	}

	.navbar-default {
		width: 100%;
	}

	.default-label {
		height: 68mm;
		width: 170px;
		text-align:center;
		background-color: white;
		color: black;
	}

	.properties {
		z-index: 800;
	}
}

@media print {

	body {
		margin: 0px;
		padding: 0px;
	}
	.jumbotron {
		padding-top: 0px !important;
	}
	.shell {
		display: none;
	}
	#properties, .navbar {
		display: none !important;
	}
	.row {
		width: 100%
	}
	@page {
		margin: 0.01cm;
	}

	#labels {
		width: 100%;
		top: 0px;
    page-break-inside: avoid;
	}

	.default-label {
		width: 20%;
		page-break-inside: avoid;
	}

	#add-btn-mobile {
		display: none;
	}


}

.row {
	margin: 0px;
}

.navbar {
    position: fixed;
	top: 0px;
	right: 0px;
    min-height: 50px;
    margin-bottom: 0px;
	border-radius: 0px;
	z-index: 500;
}

.btn {
	margin-right: 15px;
}

.container-fluid {
	padding: 0px;
	margin: 0px;
}

